--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,15 +5,17 @@ publish_to: 'none'
 homepage:
 
 environment:
-  sdk: '>=2.18.4 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0" #'>=2.18.4 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.3
-  flutter_mobx: ^2.0.6+5
-  mobx: ^2.1.3
+  flutter_mobx: ^2.0.6+1
+  mobx: ^2.0.1
+  #flutter_mobx: ^2.0.6+5
+  #mobx: ^2.1.3
   closing:
     path: ../closing
   models_weebi:
@@ -25,7 +27,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  #flutter_lints: ^2.0.0
   build_runner: ^2.1.11 #^1.12.2 #^1.10.2
   mobx_codegen: ^2.0.1+3
 
