--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,30 +1,29 @@
 name: mixins_weebi
-description: A new Flutter package project.
-homepage: 'http://weebi.com'
+homepage: http://weebi.com
 version: 0.0.1
-publish_to: 'none'
+publish_to: https://onepub.dev/api/xnxpsdavuh/
+description: A starting point for Dart libraries or applications.
 
 environment:
-  sdk: ">=2.7.0 <3.0.0" #'>=2.18.4 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   provider: ^6.0.3
   mobx: ^2.0.1
+  collection: ^1.15.0
   models_weebi:
     hosted:
       url: https://onepub.dev/api/xnxpsdavuh/
       name: models_weebi
+      version: ^1.0.7
   services_weebi:
     hosted:
       url: https://onepub.dev/api/xnxpsdavuh/
       name: services_weebi
-    #version: ^1.0.1
-  
-
+      version: ^1.0.1
 
 dev_dependencies:
-  #flutter_test:
-  #  sdk: flutter
-  #flutter_lints: ^2.0.0
-  build_runner: ^2.1.11 #^1.12.2 #^1.10.2
-  mobx_codegen: ^2.0.1+3
+  test: ^1.16.0
+  build_runner: ^2.1.4
+  mobx_codegen: ^2.0.4
+flutter: null
