--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: mixins_weebi
 homepage: http://weebi.com
-version: 0.0.7
+version: 0.0.8
 publish_to: https://onepub.dev/api/xnxpsdavuh/
-description: A starting point for Dart libraries or applications.
+description: mixines and all about mobx stores
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
