--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,15 +15,17 @@ dependencies:
   mobx: ^2.0.1
   collection: ^1.15.0
   models_weebi:
-    hosted:
-      url: https://onepub.dev/api/xnxpsdavuh/
-      name: models_weebi
-    version: ^1.0.11
+    path: ../models_weebi
+    #hosted:
+    #  url: https://onepub.dev/api/xnxpsdavuh/
+    #  name: models_weebi
+    #version: ^1.0.11
   services_weebi:
-    hosted:
-      url: https://onepub.dev/api/xnxpsdavuh/
-      name: services_weebi
-    version: ^1.0.2
+    path: ../services_weebi
+    #hosted:
+    #  url: https://onepub.dev/api/xnxpsdavuh/
+    #  name: services_weebi
+    #version: ^1.0.2
 
 dev_dependencies:
   flutter_test:
