--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,17 +15,17 @@ dependencies:
   mobx: ^2.0.1
   collection: ^1.15.0
   models_weebi:
-    path: ../models_weebi
-    #hosted:
-    #  url: https://onepub.dev/api/xnxpsdavuh/
-    #  name: models_weebi
-    #version: ^1.0.11
+    #path: ../models_weebi
+    hosted:
+      url: https://onepub.dev/api/xnxpsdavuh/
+      name: models_weebi
+    version: ^1.0.13
   services_weebi:
-    path: ../services_weebi
-    #hosted:
-    #  url: https://onepub.dev/api/xnxpsdavuh/
-    #  name: services_weebi
-    #version: ^1.0.2
+    #path: ../services_weebi
+    hosted:
+      url: https://onepub.dev/api/xnxpsdavuh/
+      name: services_weebi
+    version: ^1.0.4
 
 dev_dependencies:
   flutter_test:
