--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ build/
 pubspec.yaml
 pubspec.lock
 .dart_tool/package_config_subset
+.packages
+pubspec.lock
+.dart_tool/package_config_subset
+.dart_tool/package_config.json
+.dart_tool/version
