--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ pubspec.lock
 .dart_tool/package_config_subset
 .dart_tool/package_config.json
 .dart_tool/version
+.dart_tool/package_config.json
+.dart_tool/package_config_subset
