--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   provider: ^6.0.3
   mobx: ^2.0.1
-  collection: ^1.14.12
+  collection: 1.14.12
   models_weebi:
     git:
       url: https://github.com/weebi-com/models
