--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,21 @@
 name: mixins_weebi
 homepage: http://weebi.com
-version: 0.0.9
+version: 0.1.0
 #publish_to: none # https://onepub.dev/api/xnxpsdavuh/
 description: mixins and all about mobx stores
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-  
   collection: ^1.14.12
-  mobx: ^2.0.1
-  provider: ^6.0.3
+  mobx: ^2.2.0
+  provider: ^6.0.5
 
-  models_weebi: ^1.0.13
-    #path: ../models_weebi 
-  services_weebi: ^1.0.4
-    #path: ../services_weebi
+  models_weebi: #^1.0.13
+    path: ../models
+  services_weebi: #^1.0.4
+    path: ../services
 
 dev_dependencies:
   flutter_test:
