--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,4 @@
-include: package:flutter_lints/flutter.yaml
+#include: package:dart_lints/dart.yaml
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
