--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mixins_weebi
 homepage: http://weebi.com
-version: 0.1.02
+version: 0.1.3
 #publish_to: none # https://onepub.dev/api/xnxpsdavuh/
 description: mixins and all about mobx stores
 
@@ -12,15 +12,13 @@ dependencies:
   mobx: ^2.2.0
   provider: ^6.0.5
 
-  models_weebi: ^1.0.14
-    #path: ../models
-  services_weebi: ^1.0.5
-    #path: ../services
+  models_weebi: ^1.0.15
+  services_weebi: ^1.0.6
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^1.0.0
+  #flutter_test:
+  #  sdk: flutter
+  #flutter_lints: ^1.0.0
   test: ^1.16.0
   build_runner: ^2.1.4
   mobx_codegen: ^2.0.4
