--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   mobx: ^2.2.0
   provider: ^6.0.5
 
-  models_weebi: ^1.0.15
+  models_weebi: ^1.0.16+1
   services_weebi: ^1.0.6
 
 dev_dependencies:
