--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mixins_weebi
 homepage: http://weebi.com
-version: 0.1.3
+version: 0.1.4
 #publish_to: none # https://onepub.dev/api/xnxpsdavuh/
 description: mixins and all about mobx stores
 
@@ -12,8 +12,8 @@ dependencies:
   mobx: ^2.2.0
   provider: ^6.0.5
 
-  models_weebi: ^1.0.16+1
-  services_weebi: ^1.0.6
+  models_weebi: ^1.0.17
+  services_weebi: ^1.0.7
 
 dev_dependencies:
   #flutter_test:
