--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mixins_weebi
 homepage: http://weebi.com
-version: 0.1.6
+version: 0.1.7
 #publish_to: none # https://onepub.dev/api/xnxpsdavuh/
 description: mixins and all about mobx stores
 
@@ -12,8 +12,8 @@ dependencies:
   mobx: ^2.2.0
   provider: ^6.0.5
 
-  models_weebi: ^1.0.18
-  services_weebi: ^1.0.8
+  models_weebi: ^1.0.19
+  services_weebi: ^1.0.8+1
 
 dev_dependencies:
   #flutter_test:
