--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,24 +1,22 @@
 name: mixins_weebi
 homepage: http://weebi.com
-version: 0.1.7
+version: 0.1.8+1
 #publish_to: none # https://onepub.dev/api/xnxpsdavuh/
 description: mixins and all about mobx stores
 
 environment:
-  sdk: ">=2.19.6 <3.0.0"
+  sdk: ">=3.1.5 <4.0.0"
 
 dependencies:
   collection: ^1.14.12
-  mobx: ^2.2.0
+  mobx: ^2.2.1
   provider: ^6.0.5
 
-  models_weebi: ^1.0.20
-  services_weebi: ^1.0.8+1
+  models_weebi: ^1.0.21
+  services_weebi: ^1.0.8+2
 
 dev_dependencies:
-  #flutter_test:
-  #  sdk: flutter
-  #flutter_lints: ^1.0.0
-  test: ^1.16.0
-  build_runner: ^2.1.4
-  mobx_codegen: ^2.0.4
+  lints: ^3.0.0
+  test: ^1.24.3
+  build_runner: ^2.4.6
+  mobx_codegen: ^2.4.0
